# alyp-kettik-backend

./: .env.example  .gitignore  Dockerfile  README.md  auth_dependency.py  database.py  main.py  pyproject.toml  render.yaml  requirements.txt  shop.db
routers/: auth.py  entry.py  payment.py  products.py  recognize.py  sessions.py
services/: ollama_service.py  openai_service.py  yolo_service.py
turnstile/: index.html
