[project]
name = "alyp-kettik-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi==0.133.1",
    "httpx==0.28.1",
    "openai==2.24.0",
    "pillow==12.1.1",
    "pydantic[email]==2.12.5",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "uvicorn==0.41.0",
    "PyJWT==2.10.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "ultralytics>=8.4.31",
    "opencv-python-headless>=4.13.0.92",
]
